--- a/param/morse.yaml
+++ b/param/morse.yaml
@@ -5,8 +5,8 @@ sim:
     # Choose one of MatteFloor, SharperMatteFloor, GymFloor, or RealFloor
     floor: MatteFloor
 
-    # Turn cameras on/off
-    create_front_camera: true
-    create_left_camera: true
-    create_right_camera: true
-    create_bottom_camera: true
+    # Uncomment to turn cameras on
+    # front_camera_resolution: [1920, 1080]
+    # left_camera_resolution: [1920, 1080]
+    # right_camera_resolution: [1920, 1080]
+    # bottom_camera_resolution: [1920, 1080]
