--- a/param/morse.yaml
+++ b/param/morse.yaml
@@ -24,4 +24,5 @@ sim:
     # front_camera_resolution: [1920, 1080]
     # left_camera_resolution: [1920, 1080]
     # right_camera_resolution: [1920, 1080]
+    # back_camera_resolution: [1920, 1080]
     # bottom_camera_resolution: [1920, 1080]
