--- a/param/morse.yaml
+++ b/param/morse.yaml
@@ -26,3 +26,5 @@ sim:
     # right_camera_resolution: [1920, 1080, 60]
     # back_camera_resolution: [1920, 1080, 60]
     # bottom_camera_resolution: [1920, 1080, 60]
+
+    create_teleport_actuator: false
