--- a/param/morse.yaml
+++ b/param/morse.yaml
@@ -21,10 +21,11 @@ sim:
     floor: RealFloorV2
 
     # Uncomment to turn cameras on
-    # front_camera_resolution: [1920, 1080, 60]
-    # left_camera_resolution: [1920, 1080, 60]
-    # right_camera_resolution: [1920, 1080, 60]
-    # back_camera_resolution: [1920, 1080, 60]
-    # bottom_camera_resolution: [1920, 1080, 60]
+    # Aspect ratio must be 4:3 for the image to come out unstretched
+    # front_camera_resolution: [1280, 960, 60]
+    # left_camera_resolution: [1280, 960, 60]
+    # right_camera_resolution: [1280, 960, 60]
+    # back_camera_resolution: [1280, 960, 60]
+    # bottom_camera_resolution: [1280, 960, 60]
 
     create_teleport_actuator: false
