Fixed race condition for ground truth roombas
Previously, if the simulator_adapter came up before the roombas were
available from the sim, they would not be published.  Now the roombas to
look for are passed through rosparam, so this isn't a problem.

--- a/param/morse.yaml
+++ b/param/morse.yaml
@@ -11,6 +11,9 @@ sim:
     max_roomba_output_freq: 61
     max_obstacle_output_freq: 61
 
+    num_roombas: 10
+    num_obstacles: 4
+
     # Choose one of:
     #   MatteFloor
     #   SharperMatteFloor
