Added publisher for fc_orientation and optional orientation transform

--- a/param/morse.yaml
+++ b/param/morse.yaml
@@ -1,4 +1,5 @@
 sim:
+    ground_truth_orientation: false
     ground_truth_localization: false
     ground_truth_altitude: false
     ground_truth_camera_localization: false
