--- a/param/morse.yaml
+++ b/param/morse.yaml
@@ -3,7 +3,7 @@ sim:
     ground_truth_localization: false
     ground_truth_altitude: false
     ground_truth_camera_localization: false
-    ground_truth_roombas: true
+    ground_truth_roombas: false
     ground_truth_obstacles: false
 
     # Because MORSE spits out messages all at the same time, if you want these
