--- a/param/morse.yaml
+++ b/param/morse.yaml
@@ -35,4 +35,4 @@ sim:
     create_teleport_actuator: false
 
     # If this is a regular Quadrotor (not from senior design) make this false
-    prototype_uav: true
+    prototype_uav: false
