--- a/param/morse.yaml
+++ b/param/morse.yaml
@@ -46,4 +46,5 @@ sim:
 
     create_teleport_actuator: false
 
+    # If this is a regular Quadrotor (not from senior design) make this false
     prototype_uav: false
