--- a/package.xml
+++ b/package.xml
@@ -43,7 +43,7 @@
   <build_depend>iarc7_msgs</build_depend>
   <run_depend>iarc7_msgs</run_depend>
   <run_depend>python-numpy</run_depend>
-
+  <run_depend>robot_state_publisher</run_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
