--- a/param/morse.yaml
+++ b/param/morse.yaml
@@ -51,3 +51,6 @@ sim:
 
     # If this is a regular Quadrotor (not from senior design) make this false
     prototype_uav: false
+
+    # If this is true, no drone will be created
+    no_drone: false
