Mission 7 arena settings

--- a/param/morse.yaml
+++ b/param/morse.yaml
@@ -37,7 +37,9 @@ sim:
     #   GymFloor
     #   RealFloor
     #   RealFloorV2
-    floor: ArenaFloor5m
+    #   ArenaFloor5m
+    #   ArenaFloor20m
+    floor: ArenaFloor20m
 
     # Uncomment to turn cameras on
     # Aspect ratio must be 4:3 for the image to come out unstretched
